--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,13 @@
-Patrick Altman
-James Tauber
-Brian Rosner
-Marc Abramowitz
-Thomas Schreiber
-Katherine “Kati” Michel
+Patrick Altman <paltman@gmail.com>
+James Tauber <jtauber@jtauber.com>
+Brian Rosner <brosner@gmail.com>
+Thomas Schreiber <tom@rizu.fake>
+Marc Abramowitz <marc@marc-abramowitz.com>
+Anna Ossowski <ossanna16@gmx.de>
+Ross Crawford-d'Heureuse <rosscdh@users.noreply.github.com>
+Tamás Bitai <bitai.tamas@gmail.com>
+Seyi Ogunyemi <micrypt@users.noreply.github.com>
+Graham Ullrich <graham@flyingcracker.com>
+Katherine Michel <kthrnmichel@gmail.com>
+Mfon Eti-mfon <mfonetimfon@gmail.com>
+Patrick Scott Best <patrickscottbest@gmail.com>
