support Django 2.2.x and 3.0.x via django-jsonfield-backport

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,3 +11,4 @@ Graham Ullrich <graham@flyingcracker.com>
 Katherine Michel <kthrnmichel@gmail.com>
 Mfon Eti-mfon <mfonetimfon@gmail.com>
 Patrick Scott Best <patrickscottbest@gmail.com>
+Jacob Wegner <jacobwegner@gmail.com>
